fixed spacing

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -25,5 +25,6 @@
 .advertisement {
   display: flex;
   flex-direction: column;
+  gap: var(--size-3);
   align-items: center;
 }
